[package]
name = "gci"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["cli", "development", "git", "github", "devops"]
categories = ["command-line-utilities", "development-tools"]
description = "Interactively checkout the branches on your git repository"
homepage = "https://github.com/jiito/gci"
repository = "https://github.com/jiito/gci"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.10.1"
git2 = "0.14"
inquire = "0.2.1"
structopt = "0.3"
